(fix) overflow hidden mobile

--- a/site/web/app/themes/elefant/resources/assets/styles/layouts/_anwendungen.scss
+++ b/site/web/app/themes/elefant/resources/assets/styles/layouts/_anwendungen.scss
@@ -1,3 +1,11 @@
+body {
+  &.ti-anwendungen {
+    .wrap {
+      overflow: hidden;
+    }
+  }
+}
+
 .outer-image {
   width: 100px;
   height: 100px;
@@ -20,40 +28,45 @@
 @media (max-width: 991.98px) {
   body {
     &.ti-anwendungen {
-      section {
-        &.banner-custompage {
-          margin: 0 0 50px 0;
+      .wrap {
+        overflow: hidden;
 
-          .overview {
-            padding: 0;
-            margin: 0 auto;
-            display: flex;
-            justify-content: center;
+        section {
+          &.banner-custompage {
+            margin: 0 0 50px 0;
 
-            img {
-              max-width: 500px;
-              width: 100%;
-              height: 100%;
+            .overview {
+              padding: 0;
+              margin: 0 auto;
+              display: flex;
+              justify-content: center;
+
+              img {
+                max-width: 500px;
+                width: 100%;
+                height: 100%;
+              }
             }
           }
-        }
 
-        &.banner3-custompage {
-          margin: 50px 0 100px 0;
+          &.banner3-custompage {
+            margin: 50px 0 100px 0;
+            overflow: hidden;
 
-          h2 {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-          }
+            h2 {
+              font-size: 1.2em;
+              margin-bottom: 20px;
+            }
 
-          .col-md-6 {
-            padding-bottom: 25px;
-          }
+            .col-md-6 {
+              padding-bottom: 25px;
+            }
 
-          .bg {
-            left: 0%;
-            position: absolute;
-            top: 10%;
+            .bg {
+              left: 0%;
+              position: absolute;
+              top: 10%;
+            }
           }
         }
       }
